<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_primary60">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:text="@string/jeudelavie"
        android:gravity="center"
        android:padding="30dp"
        android:id="@+id/titre"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:id="@+id/score"
        android:paddingTop="15dp"
        android:paddingStart="15dp"
        android:layout_below="@id/titre"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resultatScore"
        android:layout_below="@id/titre"
        android:layout_alignStart="@id/editFrequence"
        android:textSize="20sp"
        android:paddingTop="15dp"
        android:paddingStart="15dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingStart="15dp"
        android:text="@string/taille_grille"
        android:id="@+id/text1"
        android:layout_below="@id/score"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/text1"
        android:id="@+id/editTaille"
        android:layout_alignStart="@id/editFrequence"
        android:layout_below="@id/score"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingStart="15dp"
        android:text="@string/frequence"
        android:layout_below="@id/text1"
        android:id="@+id/text2"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text1"
        android:id="@+id/editFrequence"
        android:layout_toRightOf="@id/text2"
        />
    <Button
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Valider"
        android:layout_below="@id/erreur"
        android:id="@+id/valider"
        android:background="#4F65E2"
        android:onClick="buttonActivated"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:textColor="@color/design_default_color_error"
        android:layout_below="@+id/text2"
        android:id="@+id/erreur"
        />

</RelativeLayout>